# SummaryAI-TT

./: .env.example  .gitattributes  .gitignore  Arch..md  README.md  architecture.md  example.json  main.py  pipeline.py  pyproject.toml  requirements.txt  results-1.csv  schemas.py  test.py
DocsParser/: Chunking.py  Parser.py  test.py  text.py
LogConf/: log_config.py
PreProcessingDocs/: Chunking.py  Parser.py
WorkflowAI/: models.py  nodes.py  observability.py  prompts.py  route.py
alembic/: env.py
alembic/versions/: 04259ab4bbd4_поменял_status_на_bool.py  8fc3a069aed9_create_summary_gen.py  9054f9437940_исправлены_ограничения_null.py  a1f629c040ab_add_trace_id_unique.py
dbs/: database.py  models.py  queries.py
