[project]
name = "summaryai-tt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "docling>=2.104.0",
    "fastapi>=0.138.0",
    "fitz>=0.0.1.dev2",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.12.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "psycopg>=3.3.4",
    "pymupdf>=1.28.0",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.51",
    "typing>=3.10.0.0",
    "uvicorn>=0.49.0",
]
